--- a/password/index.html
+++ b/password/index.html
@@ -11,43 +11,51 @@
       }
     </style>
   </head>
+
   <body>
-    <form>
-      <fieldset>
-        <legend>Password Generator</legend>
-        <div>
-          <label>
-            Length
-            <input type="number" name="length" value="16" />
-            <button type="button" id="length-8">8</button>
-            <button type="button" id="length-16">16</button>
-            <button type="button" id="length-32">32</button>
-            <button type="button" id="length-64">64</button>
-          </label>
-        </div>
-        <div>
-          <label>
-            Symbols
-            <select name="symbols">
-              <option value="alpha">a-zA-Z</option>
-              <option value="lowercaseAlpha">a-z</option>
-              <option value="alphanumeric">0-9a-zA-Z</option>
-              <option value="all" selected>all</option>
-            </select>
-          </label>
-        </div>
-        <div>
-          <label>
-            Result
-            <input name="password" type="text" readonly="readonly" />
-          </label>
-          <button type="button" id="copy">Copy</button>
-        </div>
-        <button name="generate" autofocus="autofocus" type="button">
-          Generate
-        </button>
-      </fieldset>
-    </form>
+    <main>
+      <form>
+        <fieldset>
+          <legend>Password Generator</legend>
+          <div>
+            <label>
+              Length
+              <input type="number" name="length" value="16" />
+              <button type="button" id="length-8">8</button>
+              <button type="button" id="length-16">16</button>
+              <button type="button" id="length-32">32</button>
+              <button type="button" id="length-64">64</button>
+            </label>
+          </div>
+          <div>
+            <label>
+              Symbols
+              <select name="symbols">
+                <option value="alpha">a-zA-Z</option>
+                <option value="lowercaseAlpha">a-z</option>
+                <option value="alphanumeric">0-9a-zA-Z</option>
+                <option value="all" selected>all</option>
+              </select>
+            </label>
+          </div>
+          <div>
+            <label>
+              Result
+              <input name="password" type="text" readonly="readonly" />
+            </label>
+            <button type="button" id="copy">Copy</button>
+          </div>
+          <button name="generate" autofocus="autofocus" type="button">
+            Generate
+          </button>
+        </fieldset>
+      </form>
+    </main>
+    <footer>
+      <a href="https://github.com/102/102.github.io/tree/main/password">
+        View source code
+      </a>
+    </footer>
     <script src="password.js" type="text/javascript"></script>
   </body>
 </html>
