--- a/password/index.html
+++ b/password/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Password Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Client-side lightweight password generator tool; no server-side code or analytics included"
+    />
     <style>
       div {
         margin-bottom: 1rem;
