Add a way to generate passwords from words list

--- a/password/index.html
+++ b/password/index.html
@@ -38,6 +38,7 @@
                 <option value="alpha">a-zA-Z</option>
                 <option value="lowercaseAlpha">a-z</option>
                 <option value="alphanumeric">0-9a-zA-Z</option>
+                <option value="words">words</option>
                 <option value="all" selected>all</option>
               </select>
             </label>
