--- a/armenian-name/index.html
+++ b/armenian-name/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Армянское имя</title>
     <script type="module">
       import { closest } from "https://unpkg.com/fastest-levenshtein@1.0.16/esm/mod.js";
       const femaleNames = [
