--- a/password/index.html
+++ b/password/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Client-side lightweight password generator tool; no server-side code or analytics included"
     />
+    <meta name="og:image" content="https://img01.ztat.net/banner/8656ace649bc4817bb49e75c250e9ad9/2a6b27d54ccc4e27b9c71bb357fcbff1.jpg?imwidth=103" />
     <style>
       div {
         margin-bottom: 1rem;
